--- a/zadanie_10/user/templates/user/signup.html
+++ b/zadanie_10/user/templates/user/signup.html
@@ -12,6 +12,15 @@
     <span>{{ form.errors.username }}</span>
   </div>
   <div>
+    <label> Email:
+      {{form.email}}
+    </label>
+    <span>{{ form.errors.email}}</span>
+
+  </div>
+
+
+  <div>
     <label>Password 1:
       {{ form.password1 }}
     </label>
